style: adding footer bottom padding in attempt to fix white space in footer

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ hr {
   grid-area: img4
 }
 
-#img5 {
+#img5 
   grid-area: img5
 }
 
@@ -567,6 +567,12 @@ hr {
 
   .title {
     font-size: 3rem;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .footer {
+    padding-bottom: 8rem;
   }
 }
 
